--- a/src/components/PlayerHeader.scss
+++ b/src/components/PlayerHeader.scss
@@ -9,11 +9,13 @@
   align-items: center;
   gap: 16px;
   position: fixed;
-  top: 88px;
-  left: 50%;
-  transform: translate(-50%, 0%);
-  max-width: 960px;
+  top: 32px;
+  right: 16px;
+  // left: 50%;
+  // transform: translate(-50%, 0%);
+  // max-width: 960px;
   width: 100%;
+  width: calc(100% - 278px);
   height: 156px;
   z-index: 9;
   border-radius: 16px;
