--- a/src/styles/Album.scss
+++ b/src/styles/Album.scss
@@ -1,7 +1,5 @@
 .main {
-  padding-top: 156px;
-
-
+  padding-top: 116px;
 
   // .album__content-list {
     .album__content-list__tab {
@@ -17,7 +15,7 @@
         align-items: center;
         justify-content: center;
         border-radius: 12px 4px 12px 12px;
-        background: var(--Color-03, #222);
+        background: #222;
         height: 30px;
         padding: 0 12px;
         gap: 8px;
@@ -89,7 +87,7 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
-      color: var(--primary-base, #cf0);
+      color:#cf0;
       font-family: Orbitron400;
       font-size: 24px;
       font-style: normal;
@@ -157,7 +155,7 @@
           justify-content: space-between;
           gap: 16px;
           border-radius: 4px;
-          background: var(--Color-02, #1A1A1A);
+          background: #1A1A1A;
           padding: 8px 12px;
           transition: 0.3s;
           &.music-play{
@@ -298,7 +296,7 @@
             width: 400px;
             align-items: start;
             dt{
-              color: var(--Text-music-title, #F1F1F1);
+              color:#F1F1F1;
               font-family: Inter400;
               font-size: 14px;
               text-align:left;
@@ -313,7 +311,7 @@
                 border-radius: 100%;
                 overflow: hidden;
               }
-              color: var(--Text-music-sub, #AAA);
+              color:#AAA;
               text-align: center;
               font-family: Inter400;
               font-size: 12px;
@@ -432,7 +430,7 @@
       }
     } //album__content-list__list--END--
     .album__content-list__see-more-btn {
-      color: var(--Text-music-sub, #aaa);
+      color: #aaa;
       // text-align: right;
       font-family: Orbitron500;
       font-size: 14px;
@@ -600,8 +598,11 @@
       }
     }
     .swiper-music-list {
+      max-width: 1360px;
       height: 500px;
-      padding: 40px 160px 40px 0;
+      margin: 0 auto;
+      // padding: 40px 160px 40px 0;
+      padding: 40px 60px 40px 0;
       .swiper-pagination-bullet {
         width: 4px !important;
         height: 8px !important;
