--- a/src/components/create/GetStarted.scss
+++ b/src/components/create/GetStarted.scss
@@ -395,3 +395,69 @@
     flex-direction: column;
   }
 }
+
+// 임시 스타일
+.create__get-started--radio-box {
+  margin: 20px 0;
+  display: flex;
+  gap: 40px;
+  .created__get-started--privacy,
+  .created__get-started--creation-mode {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+
+    h3 {
+      color: #f1f1f1;
+      font-family: orbitron600;
+      font-size: 16px;
+      margin-bottom: 8px;
+    }
+
+    .privacy-option,
+    .creation-mode-options {
+      display: flex;
+      gap: 20px;
+    }
+
+    .privacy-option {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+
+      input[type='radio'] {
+        appearance: none;
+        width: 20px;
+        height: 20px;
+        border: 2px solid #ccc;
+        border-radius: 50%;
+        outline: none;
+        cursor: pointer;
+        position: relative;
+
+        &:checked {
+          border-color: #cf0;
+
+          &::after {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 10px;
+            height: 10px;
+            background-color: #cf0;
+            border-radius: 50%;
+          }
+        }
+      }
+
+      label {
+        font-size: 14px;
+        color: #aaa;
+        font-family: Inter400;
+        cursor: pointer;
+      }
+    }
+  }
+}
