--- a/src/components/AdvancedCommentComponent.scss
+++ b/src/components/AdvancedCommentComponent.scss
@@ -161,6 +161,15 @@
     background: #cf0;
   }
 }
+
+.no-comment {
+  text-align: center;
+  margin-top: 32px;
+  margin-bottom: 40px;
+  color: #555;
+  font-size: 14px;
+}
+
 .rdw-colorpicker-wrapper,
 .rdw-link-wrapper,
 .rdw-emoji-wrapper,
