--- a/src/components/create/GetStarted.scss
+++ b/src/components/create/GetStarted.scss
@@ -434,6 +434,7 @@
         outline: none;
         cursor: pointer;
         position: relative;
+        padding: 0;
 
         &:checked {
           border-color: #cf0;
