상훈 feat: GetStarted 컴포넌트의 제목을 HTML 엔티티로 변경하고, 스타일 개선; MelodyMaker 및 MelodyChatBot 컴포넌트에서 ai_service 로직 수정; AlbumDetail 페이지에서 앨범 유형 표시 및 관련 로직 수정

--- a/src/components/create/GetStarted.scss
+++ b/src/components/create/GetStarted.scss
@@ -417,7 +417,13 @@
     .privacy-option,
     .creation-mode-options {
       display: flex;
-      gap: 20px;
+      padding: 9px 20px;
+      justify-content: center;
+      align-items: center;
+      gap: 12px;
+      border-radius: 12px;
+      background: var(--Color-02, #1a1a1a);
+      width: 269px;
     }
 
     .privacy-option {
