--- a/src/components/unit/RemainCountButton.scss
+++ b/src/components/unit/RemainCountButton.scss
@@ -1,19 +1,18 @@
 .create__get-started--left-count-box {
-  border-radius: 12px 4px 12px 12px;
-  background: var(--secondary-base, #00ffb3);
   display: flex;
-  flex-direction: column;
+  padding: 8px;
   justify-content: center;
   align-items: center;
   gap: 8px;
-  flex: 1 0 0;
   align-self: stretch;
-  padding: 8px;
-  margin-bottom: 40px;
+  border-radius: 12px;
+  border: 1px solid var(--secondary-base, #00ffb3);
+  background: rgba(0, 255, 179, 0.1);
+  backdrop-filter: blur(2px);
 }
 .create__get-started--left-count {
-  color: var(--Text-dark-title, #1a1a1a);
-  font-family: Orbitron600;
+  color: #fff;
+  font-family: Orbitron500;
   font-size: 16px;
   font-style: normal;
   line-height: normal;
