--- a/src/components/Loading.scss
+++ b/src/components/Loading.scss
@@ -19,7 +19,8 @@
 .loading-wrap{
   position: fixed;
   top:50%;
-  left: 50%;
+  // left: 50%;
+  left: calc(50% - 230px);
   transform: translate(-50%,-50%);
   z-index: 10;
   display: flex;
