--- a/src/components/TransactionsModal.scss
+++ b/src/components/TransactionsModal.scss
@@ -6,8 +6,13 @@
 
 
 .transactions{
+  .modal-content{
+    
+  }
     .table-container {
         width: 100%;
+        max-height: 220px;
+
         // display: flex;
         // justify-content: center;
         border-radius: 12px;
