영진 수정 - More - 버튼 추가

--- a/src/styles/AlbumDetail.scss
+++ b/src/styles/AlbumDetail.scss
@@ -359,12 +359,69 @@
               border-radius: 6px;
               background-color: #222;
             }
-            .album-detail__song-detail__left__info__share-btn {
-              padding: 4px 6px;
+            .album-detail__song-detail__more-btn{
+              // padding: 4px 6px;
               border-radius: 6px;
               background-color: #222;
               height: 32px;
-            }
+              width: 32px;
+              flex-shrink: 0;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              transition: 0.3s;
+              border: 1px solid transparent;
+              position: relative;
+              &:hover{
+                border: 1px solid #a9d400;
+              }
+              &.active{
+                .album-detail__song-detail__more-btn__list{
+                  height: 116px !important;
+                  opacity: 1;
+                }
+              }
+              .album-detail__song-detail__more-btn__list{
+                position: absolute;
+                right: 0;
+                top: 38px;
+                border-radius: 12px;
+                border: 1px solid #678300;
+                background: #0B0B0C;
+                transition: 0.3s;
+                display: flex;
+                flex-direction: column;
+                overflow: hidden;
+                width: 140px;
+                transition: 0.3s;
+                height: 0;
+                opacity: 0;
+                li{
+                  width: 100%;
+                  display: flex;
+                  justify-content: space-between;
+                  gap: 16px;
+                  align-items: center;
+                  cursor: pointer;
+                  padding: 0px 12px;
+                  height: 38px;
+                  transition: 0.3s;
+                  color: #FFF;
+                  font-family: Inter400;
+                  font-size: 14px;
+                  transition: 0.3s;
+                  text-align: left;
+                  img{
+                    width: 18px;
+                    height: 18px;
+                    object-fit: cover;
+                  }
+                  &:hover{
+                    background: #222;
+                  }
+                }
+              }//album-detail__song-detail__more-btn__list--END--
+            }//album-detail__song-detail__more-btn--END--
           }
         } //album-detail__song-detail__left__info--END--
       } //album-detail__song-detail__left--END--
@@ -1431,7 +1488,7 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1200px) {
   .song-detail {
     .album-detail__title {
       dt {
@@ -1530,11 +1587,11 @@
       }
     }
     .album-detail__song-detail__left__info{
-      flex-direction: column;
-      gap: 10px;
-      width: 100%;
-      align-items: start !important;
-      justify-content: start !important;
+      // flex-direction: column;
+      // gap: 10px;
+      // width: 100%;
+      // align-items: start !important;
+      // justify-content: start !important;
     }
   }
 }
