--- a/src/styles/Album.scss
+++ b/src/styles/Album.scss
@@ -87,6 +87,7 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
+      gap: 16px;
       color:#cf0;
       font-family: Orbitron400;
       font-size: 24px;
