--- a/src/components/Menu.scss
+++ b/src/components/Menu.scss
@@ -482,6 +482,112 @@
     cursor: pointer;
   }
 }
+.menu-box__lang-notification--select-notification-box {
+  position: absolute;
+  top: 110px;
+  left: calc(100% + 8px);
+  opacity: 0;
+  height: 0;
+  transition: 0.3s all;
+  display: flex;
+  width: 320px;
+  height: 400px;
+  padding: 32px 16px 24px 16px;
+  flex-direction: column;
+  align-items: center;
+  gap: 24px;
+  border-radius: 16px;
+  border: 1px solid var(--Color-03, #222);
+  background: var(--Color-02, #1a1a1a);
+  overflow: scroll;
+  &.visible {
+    opacity: 1;
+    height: 400px;
+  }
+  .menu-box__lang-notification--select-notification-box__item {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 8px;
+    border-radius: 4px;
+    padding: 8px;
+    background: var(--Dark-Color-01, #0b0b0c);
+    height: 68px;
+    .menu-box__lang-notification--select-notification-box__item__img-box {
+      width: 24px;
+      height: 24px;
+      img {
+        width: 100%;
+        height: 100%;
+        border-radius: 2px;
+      }
+    }
+    .menu-box__lang-notification--select-notification-box__item__txt-box {
+      display: flex;
+      flex-direction: column;
+      gap: 4px;
+      .menu-box__lang-notification--select-notification-box__item__txt-box__header {
+        display: flex;
+        align-items: center;
+        gap: 4px;
+        .menu-box__lang-notification--select-notification-box__item__txt-box__header__title {
+          overflow: hidden;
+          color: var(--Text-music-title, #f1f1f1);
+          text-overflow: ellipsis;
+          font-family: Inter;
+          font-size: 10px;
+          font-style: normal;
+          font-weight: 600;
+          line-height: 100%; /* 10px */
+          letter-spacing: 0.3px;
+          .sky {
+            overflow: hidden;
+            -webkit-box-orient: vertical;
+            -webkit-line-clamp: 2;
+            color: var(--secondary-base, #00ffb3);
+            text-overflow: ellipsis;
+            font-family: Inter;
+            font-size: 10px;
+            font-style: normal;
+            font-weight: 600;
+            line-height: 100%;
+            letter-spacing: 0.3px;
+          }
+          .purple {
+            overflow: hidden;
+            -webkit-box-orient: vertical;
+            -webkit-line-clamp: 2;
+            color: var(--tertiary-400, #6458ff);
+            text-overflow: ellipsis;
+            font-family: Inter;
+            font-size: 10px;
+            font-style: normal;
+            font-weight: 600;
+            line-height: 100%;
+            letter-spacing: 0.3px;
+          }
+        }
+      }
+      .menu-box__lang-notification--select-notification-box__item__txt-box__header__name {
+        color: var(--Text-music-title, #f1f1f1);
+        font-family: Inter400;
+        font-size: 10px;
+        font-style: normal;
+        line-height: normal;
+        letter-spacing: 0.3px;
+      }
+      .menu-box__lang-notification--select-notification-box__item__txt-box__date-box__time {
+        color: var(--Text-music-sub, #aaa);
+        font-family: Inter400;
+        font-size: 7px;
+        font-style: normal;
+        line-height: normal;
+      }
+    }
+  }
+}
 
 @media screen and (max-width: 1000px) {
   .menu {
