--- a/src/components/TransactionsModal.scss
+++ b/src/components/TransactionsModal.scss
@@ -1,10 +1,18 @@
 .transactions {
   .modal-content {
+
+  }
+  .modal-content-box{
+    min-height: 356px;
+
+    .unit-component-none-content{
+      height: 256px;
+    }
   }
   .table-container {
     width: 100%;
-    max-height: 220px;
-
+    max-height: 262px;
+    
     // display: flex;
     // justify-content: center;
     border-radius: 12px;
