--- a/src/components/Menu.scss
+++ b/src/components/Menu.scss
@@ -30,9 +30,11 @@
   &.active {
     left: -16px;
     opacity: 1;
+    width: calc(100% + 32px);
+    height: calc(100vh - 96px);
   }
   &.small-height {
-    height: calc(100vh - 110px);
+    height: calc(100vh - 96px);
     .menu__cover {
       height: 100%;
       // max-height: 400px;
@@ -49,8 +51,9 @@
     gap: 10px;
     height: 100%;
     max-height: calc(100vh - 136px);
-    overflow-y: scroll;
+    // overflow-y: scroll;
     width: calc(100% + 15px);
+    overflow: auto;
   }
   .menu__box {
     display: flex;
@@ -68,13 +71,13 @@
       width: 100%;
       width: 100%;
       height: 40px;
-      color: var(--Text-dark-title, #1a1a1a);
+      color:#1a1a1a;
       font-family: Orbitron600;
       font-size: 16px;
       font-style: normal;
       line-height: normal;
       border-radius: 12px;
-      background: var(--secondary-base, #00ffb3);
+      background:#00ffb3;
       position: relative;
     } //tw-connect-wallet--END--
     &:nth-child(1) {
@@ -496,19 +499,21 @@
     left: -300px;
     opacity: 0;
     width: 220px;
-    padding: 16px 32px 16px 16px;
+    // padding: 16px 32px 16px 16px;
+    padding: 16px;
     .menu__cover {
-      width: calc(100% + 31px);
+      // width: calc(100% + 31px);
+      width: 100%;
     }
-    &::after {
-      content: '';
-      position: absolute;
-      top: 0;
-      right: 0px;
-      width: 16px;
-      height: 100%;
-      background: #0b0b0c;
-    }
+    // &::after {
+    //   content: '';
+    //   position: absolute;
+    //   top: 0;
+    //   right: 0px;
+    //   width: 16px;
+    //   height: 100%;
+    //   background: #0b0b0c;
+    // }
   }
 
   .menu-box__lang-notification--select-lang-box {
