영진 수정 - 앨범 디테일 수정

--- a/src/styles/Evaluation.scss
+++ b/src/styles/Evaluation.scss
@@ -118,6 +118,7 @@
   margin-top: 32px;
   .judge__item{
     width: 280px;
+    min-height: 400px;
     .judge__item__title{
       width: 100%;
       height: 58px;
