--- a/src/components/Menu.scss
+++ b/src/components/Menu.scss
@@ -44,7 +44,7 @@
   //   top:16px;
   //   height:calc(100% - 30px);
   // }
-  .menu__cover{
+  .menu__cover {
     // padding: 24px 16px;
     display: flex;
     flex-direction: column;
@@ -72,13 +72,13 @@
       width: 100%;
       width: 100%;
       height: 40px;
-      color:#1a1a1a;
+      color: #1a1a1a;
       font-family: Orbitron600;
       font-size: 16px;
       font-style: normal;
       line-height: normal;
       border-radius: 12px;
-      background:#00ffb3;
+      background: #00ffb3;
       position: relative;
     } //tw-connect-wallet--END--
     &:nth-child(1) {
@@ -142,7 +142,7 @@
         gap: 8px;
         padding: 8px;
         border-radius: 12px 4px 12px 12px;
-        background:#00ffb3;
+        background: #00ffb3;
         margin-bottom: 10px;
         .menu__box__my-page__level {
           // flex: 52px;
@@ -436,8 +436,6 @@
       } //menu__box__gnb-list__item--END--
     } //menu__box__gnb-list--END--
 
-
-
     .menu-box__lang-notification {
       display: flex;
       gap: 8px;
@@ -477,9 +475,8 @@
     opacity: 1;
     height: 108px;
     padding: 8px 0px;
-    
   }
-  &.mobile{
+  &.mobile {
     display: none;
   }
 }
@@ -501,7 +498,7 @@
   left: calc(100% + 8px);
   height: 0;
   transition: 0.3s all;
-  display: flex;
+  display: none;
   width: 320px;
   padding: 20px 16px 24px 16px;
   flex-direction: column;
@@ -514,6 +511,7 @@
   &.visible {
     opacity: 1;
     height: 400px;
+    display: flex;
   }
   .menu-box__lang-notification--select-notification-box__header {
     width: 100%;
@@ -522,6 +520,21 @@
     align-items: center;
     .menu-box__lang-notification--select-notification-box__close-btn {
       margin-left: 100%;
+    }
+    .menu-box__lang-notification--select-notification-box__header__btn {
+      margin-left: auto;
+      border-radius: 100px;
+      background: var(--Color-03, #222);
+      display: flex;
+      padding: 8px 16px;
+      align-items: center;
+      gap: 8px;
+      color: var(--Text-music-title, #f1f1f1);
+      font-family: Inter500;
+      font-size: 12px;
+      font-style: normal;
+      line-height: 100%; /* 12px */
+      letter-spacing: 0.36px;
     }
     .menu-box__lang-notification--select-notification-box__header__title {
       color: var(--Text-music-title, #f1f1f1);
@@ -620,22 +633,22 @@
 }
 
 @media screen and (max-width: 1000px) {
-  .menu-box__lang-notification--select-lang-box{
-    &.pc{
+  .menu-box__lang-notification--select-lang-box {
+    &.pc {
       display: none !important;
     }
-    &.mobile{
+    &.mobile {
       display: block !important;
       position: relative;
       left: auto;
       top: auto;
       width: 100%;
       margin-bottom: 0px;
-      &.visible{
+      &.visible {
         margin-bottom: 16px;
       }
     }
-  }//menu-box__lang-notification--select-lang-box--END--
+  } //menu-box__lang-notification--select-lang-box--END--
   .menu {
     transition: 0.3s;
     position: relative;
@@ -659,7 +672,6 @@
     //   height: 100%;
     //   background: #0b0b0c;
     // }
-
   }
 
   .menu-box__lang-notification--select-lang-box {
