--- a/src/components/Loading.scss
+++ b/src/components/Loading.scss
@@ -1,66 +1,55 @@
-
-
-
-
-
-
-
-
-
-.loading{
-  img{
+.loading {
+  img {
     width: 22px;
     height: 22px;
     margin: 0 auto;
   }
-}//loading--END--
+} //loading--END--
 
-
-.loading-wrap{
+.loading-wrap {
   position: fixed;
-  top:50%;
+  top: 50%;
   // left: 50%;
   left: calc(50% - 230px);
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   z-index: 10;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-}//loading-wrap--END--
-.response{
+} //loading-wrap--END--
+.response {
   padding: 16px;
   border-radius: 18px;
   border: 1px solid #222;
-  H2{
+  H2 {
     color: var(--primary-base, #cf0);
     font-family: Orbitron400;
     font-size: 18px;
     letter-spacing: 0.54px;
     margin-bottom: 12px;
   }
-}//response--END--
-/* From Uiverse.io by elijahgummer */ 
-.middle__bg{
-    width: 100%;
-    height: 100%;
-    background: #000;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 9;
-    opacity: 0.7;
+} //response--END--
+/* From Uiverse.io by elijahgummer */
+.middle__bg {
+  width: 100%;
+  height: 100%;
+  background: #000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9;
+  opacity: 0.7;
 }
-.middle__title{
-text-align: center;
+.middle__title {
+  text-align: center;
   z-index: 10;
   font-size: 12px;
-  color: #CF0;
+  color: #cf0;
   text-align: center;
   width: 100%;
 }
 .middle {
-
   // &::before{
   //   content: '';
   //   width: 100%;
@@ -126,11 +115,7 @@ text-align: center;
 
   50% {
     transform: scaleY(1);
-    background: linear-gradient(
-      to bottom,
-      #CF0,
-      #ffff00
-    ); /* Gradient from gold to yellow */
+    background: linear-gradient(to bottom, #cf0, #ffff00); /* Gradient from gold to yellow */
   }
 
   100% {
@@ -139,9 +124,8 @@ text-align: center;
   }
 }
 
-
 @media screen and (max-width: 768px) {
-  .middle__title{
-    top:calc(50% + 46px);
+  .middle__title {
+    top: calc(50% + 46px);
   }
 }
