--- a/src/components/modal/ConfirmModal.scss
+++ b/src/components/modal/ConfirmModal.scss
@@ -51,5 +51,12 @@
         border: 1px solid #383838;
       }
     }
+    .loading {
+      background-color: #383838;
+      cursor: not-allowed;
+      &::before {
+        border: 1px solid #383838;
+      }
+    }
   }
 }
