--- a/src/components/Menu.scss
+++ b/src/components/Menu.scss
@@ -552,7 +552,6 @@
     height: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
     gap: 8px;
     border-radius: 4px;
     padding: 8px;
@@ -561,6 +560,7 @@
     .menu-box__lang-notification--select-notification-box__item__img-box {
       width: 24px;
       height: 24px;
+      margin-right: 8px;
       img {
         width: 100%;
         height: 100%;
@@ -575,6 +575,7 @@
         display: flex;
         align-items: center;
         gap: 4px;
+        min-width: 200px;
         .menu-box__lang-notification--select-notification-box__item__txt-box__header__title {
           overflow: hidden;
           color: var(--Text-music-title, #f1f1f1);
@@ -620,10 +621,19 @@
       }
       .menu-box__lang-notification--select-notification-box__item__txt-box__date-box__time {
         color: var(--Text-music-sub, #aaa);
+        display: flex;
         font-family: Inter400;
         font-size: 7px;
         font-style: normal;
         line-height: normal;
+        text-align: right;
+        margin-left: auto;
+        img {
+          margin-right: 5px;
+        }
+      }
+      .menu-box__lang-notification--select-notification-box__item__btn {
+        margin-left: auto;
       }
     }
   }
